Improved DTDResolver